--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "scrollreveal": "^4.0.9",
     "web-vitals": "^2.1.4"
@@ -46,6 +47,7 @@
     "autoprefixer": "^10.4.12",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.1.8",
     "tailwindcss-textshadow": "^2.1.3"
   }
